<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="48dp" >

   <View
      android:id="@+id/divider"
       android:layout_width="4dp"
       android:layout_height="520dp"
       android:background="#070707"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

   <TextView
       android:id="@+id/Team_a_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toStartOf="@id/divider"
       android:paddingTop="60dp"
       app:layout_constraintTop_toTopOf="parent"
       android:textColor="#2C2B2B"
       android:text="@string/team_a"
       android:textSize="34sp" />

   <TextView
       android:id="@+id/Team_a_score"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_0"
       android:textColor="#2C2B2B"
       android:textSize="34sp"
       app:layout_constraintEnd_toStartOf="@id/divider"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/Team_a_label"
       android:layout_marginTop="30dp"/>

   <Button
       android:id="@+id/adding_3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       android:text="@string/Add_three_points"
       android:textColor="@color/black"
       app:layout_constraintEnd_toStartOf="@id/divider"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/Team_a_score"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />

   <Button
       android:id="@+id/adding_2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="@id/divider"
       app:layout_constraintTop_toBottomOf="@id/adding_3"
       android:textColor="@color/black"
       android:text="@string/Add_two_points"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />

   <Button
       android:id="@+id/free_throw"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="@id/divider"
       app:layout_constraintTop_toBottomOf="@id/adding_2"
       android:textColor="@color/black"
       android:text="@string/free_throw"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />


   <Button
       android:id="@+id/reset"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       android:text="@string/reset"
       android:textColor="@color/black"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/divider"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />


   <TextView
       android:id="@+id/Team_b_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@id/divider"
       app:layout_constraintEnd_toEndOf="parent"
       android:paddingTop="60dp"
       app:layout_constraintTop_toTopOf="parent"
       android:textColor="#2C2B2B"
       android:text="@string/team_b"
       android:textSize="34sp" />

   <TextView
       android:id="@+id/Team_b_score"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toEndOf="@id/divider"
       app:layout_constraintEnd_toEndOf="parent"
       android:paddingTop="110dp"
       app:layout_constraintTop_toTopOf="@id/Team_a_label"
       android:textColor="#2C2B2B"
       android:text="@string/_0b"
       android:textSize="34sp"
       android:layout_marginTop="30dp" />

   <Button
       android:id="@+id/adding_3b"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       app:layout_constraintStart_toEndOf="@id/divider"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/Team_b_score"
       android:textColor="@color/black"
       android:text="@string/Add_three_points"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />

   <Button
       android:id="@+id/adding_2b"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       app:layout_constraintStart_toEndOf="@id/divider"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/adding_3b"
       android:textColor="@color/black"
       android:text="@string/Add_two_points"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />

   <Button
       android:id="@+id/free_throw_b"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:backgroundTint="#FF5722"
       app:layout_constraintStart_toEndOf="@id/divider"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/adding_2b"
       android:textColor="@color/black"
       android:text="@string/free_throw"
       android:layout_marginTop="40dp"
       android:textSize="20sp" />




</androidx.constraintlayout.widget.ConstraintLayout>